hphp/hack/test/typecheck/error_messages/inc_dynamic.php.exp
File "inc_dynamic.php", line 4, characters 12-13:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
